Added argument variables for voice and prompt. Reorganized some src files. Found issues with multiple guild voice hosting (NOT FIXED). Updated README

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,8 @@ add_executable(AIBot
     src/characterBot.cpp
     src/audioReceiver.cpp
     src/speechToText.cpp
+    src/guildInformation.cpp
+    src/argControl.cpp
 )
 
 target_include_directories(AIBot PRIVATE 
